# xmpp-rs

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
cloudflared/: config.yml
src/: auth.rs  c2s.rs  config.rs  main.rs  muc.rs  roster.rs  router.rs  s2s.rs  stanza.rs  tls.rs
