[package]
name = "xmpp-server"
version = "0.1.0"
edition = "2021"
description = "A federated XMPP server written in Rust"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
rcgen = "0.13"
x509-parser = "0.17"
webpki-roots = "0.26"
quick-xml = { version = "0.36", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
sha1 = "0.10"
hmac = "0.12"
hex = "0.4"
base64 = "0.22"
rand = "0.8"
ring = "0.17"
regex = "1"
thiserror = "2"
anyhow = "1"
